--- a/app/assets/components/header.html
+++ b/app/assets/components/header.html
@@ -5,22 +5,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="assets/css/style-min.css">
-	<link rel="shortcut icon" href="assets/img/dist/favicon.ico" type="image/x-icon">
-	<title>Three</title>
+	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+	<title>MusoCi</title>
 </head>
 
 <body>
-	<header class="header container">
+	<header class="header">
 		<input type="checkbox" id="header__burger">
 		<nav class="nav">
 			<label class="burger_inside" for="header__burger"><span>close</span></label>
 			<a href="#portfolio" class="nav__item">portfolio</a>
 			<a href="#about" class="nav__item">about</a>
-			<a href="#intro" class="nav__logo"><img src="assets/img/logo.webp" alt=""></a>
 			<a href="#team" class="nav__item">articles</a>
 			<a href="#contacts" class="nav__item">contact</a>
 		</nav>
-		<label class="burger" for="header__burger"><svg class="burger__svg">
-				<use xlink:href="./assets/img/dist/burger-filled.svg#burger"></use>
-			</svg></label>
+		<label class="burger" for="header__burger">
+			Menu
+		</label>
 	</header>
