--- a/app/assets/sass/variables.scss
+++ b/app/assets/sass/variables.scss
@@ -52,6 +52,12 @@
 	--colorGreenLight: #00e558;
 	--colorGreenLightRGB: 0, 229, 88;
 
-	--colorWhite: #ffffff;
 	--colorWhiteDark: #e9ecef;
+
+	--colorRed: #D24444;
+	--colorRedRGB: 210, 68, 68;
+
+	--colorWhite: #E2E2E2;
+	--colorWhiteRGB: 226, 226, 226;
+	--colorBlack: #181818;
 }
