--- a/app/assets/sass/blocks.scss
+++ b/app/assets/sass/blocks.scss
@@ -4,16 +4,7 @@
 }
 
 .text {
-	font-family: MaliLight;
-	line-height: 24px;
-	font-weight: 300;
 	color: inherit;
-}
-
-.title_40 {
-	font-size: 2.5rem;
-	font-weight: 400;
-	text-transform: uppercase;
 }
 
 .btn {
@@ -74,22 +65,14 @@
 }
 
 .burger {
-	display: none;
-	position: fixed;
+	position: absolute;
+	right: 0;
+	top: 0;
 	width: 60px;
-	aspect-ratio: 4/3;
-	top: 5vw;
-	right: 5vw;
+	height: 100%;
 	padding: 5px;
-	color: var(--colorWhite);
-	border: 2px solid var(--colorGreenLight);
-	background-color: rgba(var(--colorVioletBlueDarkRGB), 0.8);
-
-	&__svg {
-		position: relative;
-		z-index: 2;
-		stroke: var(--colorWhite);
-	}
+	color: var(--colorBlack);
+	background-color: rgba(var(--colorWhiteRGB), 0.8);
 }
 
 .burger_inside {
@@ -110,9 +93,13 @@
 
 .nav {
 	display: flex;
-	gap: 48px;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	width: 30vw;
+	height: 100%;
+	background-color: rgba(var(--colorWhiteRGB), 0.2);
+	backdrop-filter: blur(3px);
 }
 
 .nav__item {
@@ -141,45 +128,6 @@
 			opacity: 1;
 		}
 	}
-}
-
-.nav__logo {
-	position: relative;
-
-	&:before {
-		content: 'THREE';
-		position: absolute;
-		top: 100%;
-		font-family: Playfair;
-		left: 50%;
-		translate: -50% 0;
-	}
-}
-
-.carousel {
-	display: flex;
-
-	&__controls {
-		display: flex;
-		flex-grow: 1;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		gap: 20px;
-	}
-
-	&__frame {
-		height: 100%;
-	}
-}
-
-.frame {
-	overflow: hidden;
-}
-
-.belt {
-	display: flex;
-	align-items: center;
 }
 
 .balcony {
