--- a/app/assets/components/header.html
+++ b/app/assets/components/header.html
@@ -13,13 +13,12 @@
 	<header class="header">
 		<input type="checkbox" id="header__burger">
 		<nav class="nav">
-			<label class="burger_inside" for="header__burger"><span>close</span></label>
-			<a href="#portfolio" class="nav__item">portfolio</a>
-			<a href="#about" class="nav__item">about</a>
-			<a href="#team" class="nav__item">articles</a>
-			<a href="#contacts" class="nav__item">contact</a>
+			<a href="#portfolio" class="nav__item btn"><span>portfolio</span></a>
+			<a href="#about" class="nav__item btn"><span>portfolio</span></a>
+			<a href="#team" class="nav__item btn"><span>portfolio</span></a>
+			<a href="#contacts" class="nav__item btn"><span>portfolio</span></a>
 		</nav>
-		<label class="burger" for="header__burger">
+		<button class="burger">
 			Menu
-		</label>
+		</button>
 	</header>
