--- a/app/assets/components/intro.html
+++ b/app/assets/components/intro.html
@@ -1,2 +1,31 @@
 <section class="intro" id="intro">
+	<div class="intro__background">
+		<img class="intro__speaker" src="./assets/img/speaker.webp" alt="">
+		<div class="intro__waves">
+			<div class="intro__wave"></div>
+			<div class="intro__wave"></div>
+		</div>
+	</div>
+	<div class="intro__wrapper">
+		<div class="intro__logo logo">
+			<p class="logo__text">Muso</p>
+			<div class="logo__accent">
+				<p class="logo__text_accent">Ci</p>
+			</div>
+		</div>
+		<div class="intro__data">
+			<h2 class="intro__title">Best option for your greatest achievements</h2>
+			<ul class="intro__list list">
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, consequuntur?
+				</li>
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio facilis sunt
+					repudiandae, reprehenderit ab asperiores.</li>
+				<li class="list__item">Lorem ipsum dolor sit amet.</li>
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus reprehenderit
+					cupiditate facilis, dolorum amet quod ipsa ex enim animi aperiam!</li>
+			</ul>
+		</div>
+		<a href="#" class="intro__btn btn"><span>portfolio</span></a>
+	</div>
 </section>
