--- a/app/assets/sass/reseting.scss
+++ b/app/assets/sass/reseting.scss
@@ -11,7 +11,7 @@ html {
 body {
 	margin: 0;
 	padding: 0;
-	font-family: MaliRegular;
+	font-family: var(--fontFamilyLatin);
 	background-color: var(--colorWhiteDark);
 }
 
@@ -20,7 +20,7 @@ h2,
 h3,
 h4,
 h5 {
-	font-family: Playfair;
+	font-family: var(--fontFamilyKanit);
 }
 
 button {
