--- a/app/assets/sass/variables.scss
+++ b/app/assets/sass/variables.scss
@@ -1,49 +1,5 @@
-@font-face {
-	font-family: MaliBlack;
-	src: local('Mali'), url(../fonts/Muli/Muli-Black.ttf);
-	font-weight: 900;
-}
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&family=M+PLUS+Code+Latin:wght@100;200;300;400;500;600;700&display=swap');
 
-@font-face {
-	font-family: MaliExtraBold;
-	src: local('Mali'), url(../fonts/Muli/Muli-ExtraBold.ttf);
-	font-weight: 700;
-}
-
-@font-face {
-	font-family: MaliBold;
-	src: local('Mali'), url(../fonts/Muli/Muli-Bold.ttf);
-	font-weight: 600;
-}
-
-@font-face {
-	font-family: MaliSemiBold;
-	src: local('Mali'), url(../fonts/Muli/Muli-SemiBold.ttf);
-	font-weight: 500;
-}
-
-@font-face {
-	font-family: MaliRegular;
-	src: local('Mali'), url(../fonts/Muli/Muli-Regular.ttf);
-	font-weight: 400;
-}
-
-@font-face {
-	font-family: MaliLight;
-	src: local('Mali'), url(../fonts/Muli/Muli-Light.ttf);
-	font-weight: 300;
-}
-
-@font-face {
-	font-family: MaliExtraLight;
-	src: local('Mali'), url(../fonts/Muli/Muli-ExtraLight.ttf);
-	font-weight: 200;
-}
-
-@font-face {
-	font-family: Playfair;
-	src: local('Playfair'), url(../fonts/Playfair-Black/playfair-display-black.ttf);
-}
 
 :root {
 	--colorVioletBlueDark: #290a59;
@@ -60,4 +16,9 @@
 	--colorWhite: #E2E2E2;
 	--colorWhiteRGB: 226, 226, 226;
 	--colorBlack: #181818;
+
+	--fontFamilyLatin: 'M PLUS Code Latin',
+		sans-serif;
+	--fontFamilyKanit: 'Kanit', sans-serif;
+
 }
